--- a/applications/apps/chatbot-backend/base/kustomization.yaml
+++ b/applications/apps/chatbot-backend/base/kustomization.yaml
@@ -6,7 +6,9 @@ namespace: chatbot
 resources:
   - deployment.yaml
   - service.yaml
+  # - namespace.yaml
 
-commonLabels:
-  app: chatbot-backend
-  managed-by: argocd
+labels:
+  - pairs:
+      app: chatbot-backend
+      managed-by: argocd
