--- a/applications/apps/chatbot-backend/base/deployment.yaml
+++ b/applications/apps/chatbot-backend/base/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: chatbot-backend
-  namespace: chat
+  namespace: chatbot
 spec:
   replicas: 1
   selector:
